--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@graphql-mesh/postgraphile": "0.99.3",
     "@graphql-mesh/runtime": "0.100.3",
     "@graphql-mesh/transform-prefix": "0.99.3",
+    "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
